# simple-captioner

./: .editorconfig  BUGS.md  CLAUDE.md  README.md  app.py  pyproject.toml
.github/: dependabot.yml
src/simple_captioner/: app.py  captioner.py  cli.py  common.py
