[project]
name = "simple-captioner"
version = "3.0.0"
dependencies = [
	"gradio>=6.14.0",
	"Pillow>=11.2.1",
	"qwen_vl_utils>=0.0.14",
	"transformers>=5.7.0",
	"accelerate>=1.13.0",
	"bitsandbytes>=0.49.2",
	"hf_xet>=1.4.3",
	"torch",
	"torchvision",
]
requires-python = ">=3.10"

[project.optional-dependencies]
# Unfortunately it require compilation
flash2 = [
	"flash-attn>=2.8.3",
]
# https://pypi.org/project/flash-attn-4/ is for hopper and blackwell
flash4 = [
	"flash-attn-4[cu13]",
]

[project.scripts]
simple-captioner = "simple_captioner.cli:main"

[project.gui-scripts]
gsimple-captioner = "simple_captioner.app:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W"]

[tool.uv]
prerelease = "allow"
build-constraint-dependencies = [
	"packaging",
	"pip",
	"setuptools==80.10.2",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
